--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <div class="box-icon">
                         <img src="images/Paomedia-Small-N-Flat-Calendar.svg" alt="Daily Checkin">
                     </div>
-                    <p><a href="daily checkin.html">Daily Task</a></p>
+                    <p class="daily-title"><a href="daily checkin.html">Daily Task</a></p>
                 </div>
                 <!-- bonuses box -->
                 <div class="box">
@@ -90,15 +90,20 @@
                         <img src="images/gold-coin-leprechaun-money-gold-pot-374cc050e2deeac87ef03fa64241b726.png"
                             style="width: 35px; height: 35px;" alt="Bonus">
                     </div>
-                    <p><a href="bonuses.html">Bonuses</a></p>
+                    <p class="daily-title"><a href="bonuses.html">Bonuses</a></p>
                 </div>
                 <!-- Daily meme box -->
                 <div class="box">
                     <div class="bullet"></div>
+
                     <div class="box-icon">
                         <img src="images/pngegg (6).png" style="width: 35px; height: 35px;" alt="Daily Meme">
                     </div>
-                    <p><a href="">Daily Meme</a></p>
+                    <p class="daily-title"><a href="">Daily Meme</a></p>
+                    <div class="come">
+                        <p>coming soon</p>
+                    </div>
+
                 </div>
             </div>
             <!-- main-box -->
